src/test/ui/match/match-unresolved-one-arm.rs
fn foo<T>() -> T { panic!("Rocks for my pillow") }

fn main() {
    let x = match () {
        () => foo() //~ ERROR type annotations needed
    };
}
